# website

./: .cz.yaml  .gitignore  .gitlab-ci.yml  .gitmodules  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.centurion/: child_docs.yaml
.gitea/workflows/: bump.yaml  mirror_github.yaml  mkdocs-build.yaml  mkdocs-lint.yaml  pull-requests.yaml  push.yaml  release.yaml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: mirror_gitlab.yaml
.gitlab/: -.gitlab-ci.yml  .gitlab-ci.yml  project_docs.gitlab-ci.yml
.gitlab/issues/: website_issue.md
.gitlab/merge_requests/: new_article.md
custom-plugins/mkdocs-plugin-tags/: .gitattributes  .gitignore  LICENSE.md  README.md  setup.cfg  setup.py
custom-plugins/mkdocs-plugin-tags/tags/: plugin.py
custom-plugins/mkdocs-plugin-tags/tags/templates/: tags.md.template
pages/: contact.md  index.md  operations.md  projects.md  robots.txt  tags.md  wiki.md
pages/articles/: index.md
pages/articles/2014/: mdt_setup.md
pages/operations/: index.md  syntax.md
pages/projects/: index.md
pages/stylesheets/: extra.css
pages/wiki/: index.md
public/: index.html
public/CA/: NWWRootCA.crt  NWWVPNCA.crt  NWW_Root_CA.crt
public/CA/CRL/: NFCCA.crl  (+7 more)
test/: requirements.txt
test/unit/: conftest.py  main_test.py  privacy_test.py
theme-overrides/: article.html  article_list.html  blog_list.html  blog_post.html  home.html  sitemap.xml
theme-overrides/partials/: article_metadata.html  blog_metadata.html  footer.html
wiki/: robots.txt
wiki/current/: index.md
(+61 files in other folders)
