[metadata]
name = mkdocs-plugin-tags
author = No Fuss Computing
author_email = helpdesk@nofusscomputing.com
url = https://gitlab.com/nofusscomputing/infrastructure/website
description = "Create tags in mkdocs"
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
keywords = "mkdocs python markdown tags"
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Security :: Cryptography

[versioneer]
VCS = git
style = pep440
versionfile_source = tags/_version.py
versionfile_build = tags/_version.py
tag_prefix =
parentdir_prefix = tags-
